force-app/main/default/objects/Invoice_Line__c/fields/QuickBook_Item_ID__c.field-meta.xml
<CustomField>
    <fullName>QuickBook_Item_ID__c</fullName>
    <label>QuickBook Item ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>